fix due to reviewer's comments